Fix the keyboar showing code so the chat and the input is visible again.

--- a/Plug-Ins/Web Interface/Resources/iphone/iphone.css
+++ b/Plug-Ins/Web Interface/Resources/iphone/iphone.css
@@ -140,10 +140,23 @@ body.landscape .colloquy-panel-input {
 	display: none;
 }
 
+body.keyboard-visible #main > .header {
+	top: 216px;
+}
+
+body.keyboard-visible .colloquy-panel {
+	top: 260px;
+	height: 156px;
+}
+
 .colloquy-panel-transcript {
 	background-color: white;
 	height: 335px;
 	overflow: auto;
+}
+
+body.keyboard-visible .colloquy-panel-transcript {
+	height: 119px;
 }
 
 .colloquy-panel-input {
@@ -184,7 +197,7 @@ body.landscape .colloquy-panel-input {
 	top: 416px;
 	left: 0;
 	width: 100%;
-	height: 417px;
+	height: 416px;
 	background-color: white;
 	display: none;
 	z-index: 200;
